# parallel-distrbution

./: CMakeLists.txt  README.md  server.h
Code/: Makefile  main.c  serialtester.c  test.sh  try.c
Development Kit Lab3/Development Kit Lab3/: try.c
Development_Kit_Lab4/Development_Kit_Lab4/: main.c  serialtester.c  test.sh
Members/: members.txt
demos/: client  input.txt  server  simpleClient.c  simpleServer.c
dev/: Lab4_IO.c  Makefile  main.c
matrix-multiplication/: CMakeLists.txt
matrix-multiplication/src/: Makefile  data_output  main  main.c  main.h  matrix_generator  matrixgen.c  out  test  tester  util.c  util.h
src/: Makefile  main_index_map.c  serialtester.c  test.sh  try.c  try_fix.c
src/csv/: map_one_inner_directive.csv  master_directive_size_1000.csv  master_directive_size_500.csv  no_map_one_inner_directive.csv  one_inner_directive_size_1000.csv  one_inner_directive_size_500.csv  stat.xlsx
thread-server/: CMakeLists.txt  Makefile  avg_time.py  client.c  common.h  main1.c  main1.h  main2.c  main3.c  main4.c  read-write-lock.h  server.h  server_defect.h  test.sh
thread-server/Code/: Makefile  main3.c  main4.c  readme
thread-server/Members/: memebers.txt
thread-server/demos/: Makefile  api  arrayRW.c
thread-server/runtime/: main_1_10  main_1_100  main_1_1000  main_2_10  main_2_100  main_2_1000
